--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -149,6 +149,7 @@ body {
 }
 
 .triangle-icon {
+  display: none;
   position: absolute;
   top: 33px;
   left: 122px;
@@ -588,6 +589,7 @@ body {
   flex-direction: column;
   color: #000000;
   text-decoration: none;
+  transition: ease-out 50ms;
 }
 
 .product-link:active {
@@ -850,7 +852,7 @@ body {
   opacity: 0.3;
 }
 
-.footer-logo:focus {
+.footer-logo:focus-visible {
   outline: 2px solid #af4fff;
 }
 
@@ -1027,12 +1029,14 @@ body {
 }
 
 .modal-delivery {
+  /* display: none; */
   width: 760px;
   border: 10px solid rgba(0, 0, 0, 1);
   box-shadow: 0 10px 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .modal-title-section {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -1048,12 +1052,15 @@ body {
 }
 
 .modal-close {
+  position: absolute;
   border: none;
   outline: none;
   background-color: rgba(255, 255, 255, 1);
   padding: 0;
   width: 26px;
   height: 26px;
+  top: 16px;
+  right: 0;
 }
 
 .modal-close:hover {
@@ -1111,11 +1118,13 @@ input[name="modal-products"] {
 
 .quantity-container {
   display: flex;
-  margin-left: 40px;
+  width: 160px;
+
 }
 
 .quantity-wrapper {
   position: relative;
+  width: 160px;
 }
 
 .buttons-wrapper {
@@ -1126,7 +1135,7 @@ input[name="modal-products"] {
   justify-content: space-between;
   align-items: center;
   background-color: #f0f0f0;
-  max-width: 300px;
+  max-width: 160px;
   width: 100%;
 }
 
@@ -1134,22 +1143,56 @@ input[name="modal-products"] {
   position: absolute;
   border: none;
   outline: none;
-  left: 22px;
-  top: 20px;
+  left: 2px;
+  top: 2px;
   padding: 0;
   z-index: 500;
+  width: 63px;
+  height: 56px;
+  padding-bottom: 8px;
 }
+
+.remove-product:hover {
+    color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(235, 235, 235, 1)
+  }
+
+.remove-product:focus-visible {
+    outline: 2px solid #af4fff;
+    background-color: rgba(240, 240, 240, 1);
+  }
+
+  .remove-product:active {
+    color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(240, 240, 240, 1);
+  }
 
 .add-product {
   border: none;
   outline: none;
   padding: 0;
-  width: 16px;
-  height: 17px;
+  width: 63px;
+  height: 56px;
   position: absolute;
-  left: 117px;
-  bottom: 21px
+  left: 95px;
+  bottom: 2px;
 }
+
+.add-product:hover {
+  color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(235, 235, 235, 1)
+}
+
+.add-product:focus-visible {
+  outline: 2px solid #af4fff;
+  background-color: rgba(240, 240, 240, 1);
+}
+
+.add-product:active {
+  color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(240, 240, 240, 1);
+}
+
 
 input[class="auth-form-field"] {
   height: 60px;
@@ -1312,8 +1355,6 @@ label[for="product-qty"] {
   align-items: center;
 }
 
-
-
 .hint {
   font-family: 'Rubik';
   font-style: normal;
@@ -1330,7 +1371,7 @@ input[class="modal-quantity"] {
   background-color: #f0f0f0;
   padding: 0;
   justify-content: center;
-  max-width: 153px;
+  max-width: 160px;
   padding-left: 73px;
   width: 100%;
   font-family: 'Rubik';
@@ -1353,8 +1394,6 @@ input[class="modal-quantity"]:focus-visible {
     appearance: none;
     -moz-appearance: textfield;
 }
-
-
 
 .send-button {
   position: relative;
@@ -1723,6 +1762,7 @@ input::-webkit-input-placeholder {
 .pagination-current {
   color: rgba(68, 68, 68, 0.3);
   cursor: pointer;
+  transition: ease-out 50ms;
 }
 
 .pagination-current:hover {
@@ -1978,7 +2018,9 @@ input::-webkit-input-placeholder {
 
 .newsletter-wrapper {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 56px;
 }
 
 .newsletter-title {
@@ -2269,6 +2311,7 @@ input::-webkit-input-placeholder {
   padding: 0;
   color: rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  transition: ease-out 50ms;
 }
 
 .button-down {
@@ -2276,6 +2319,7 @@ input::-webkit-input-placeholder {
   padding: 0;
   color: rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  transition: ease-out 50ms;
 }
 
 .button-up:hover {
